@@ -1,11 +1,13 @@
-package com.example.peachmusic.domain.song.service;
+package com.example.peachmusic.domain.song.service.recommend;
 
 import com.example.peachmusic.common.enums.UserRole;
 import com.example.peachmusic.common.model.AuthUser;
 import com.example.peachmusic.domain.playlistsong.repository.PlaylistSongRepository;
 import com.example.peachmusic.domain.song.dto.SongFeatureDto;
 import com.example.peachmusic.domain.song.dto.response.SongRecommendationResponseDto;
+import com.example.peachmusic.domain.song.recommend.FeatureVectorizer;
 import com.example.peachmusic.domain.song.repository.SongRepository;
+import com.example.peachmusic.domain.song.service.RecommendationService;
 import com.example.peachmusic.domain.songlike.repository.SongLikeRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -13,9 +15,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Slice;
-import org.springframework.data.domain.SliceImpl;
 
 import java.util.Collections;
 import java.util.List;
@@ -23,6 +22,7 @@ import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
 class RecommendationServiceTest {
@@ -42,34 +42,41 @@ class RecommendationServiceTest {
     @InjectMocks
     private RecommendationService recommendationService;
 
+    private SongRecommendationResponseDto createDummyDto(Long songId) {
+        return new SongRecommendationResponseDto(songId, "song-" + songId, 100L, "artist", 200L, "album", "album.jpg", 50L);
+    }
+
     @Test
     @DisplayName("추천 조회 성공 - Seed가 없으면 Cold Start 추천을 반환")
-    void success_getRecommendedSongSlice_coldStart() {
+    void success_getRecommendedSongList_coldStart() {
         // given 로그인한 유저 정보와 페이지 정보
         AuthUser authUser = new AuthUser(1L, "test@test.com", UserRole.USER, 1L);
-        Pageable pageable = Pageable.ofSize(10);
 
         // 사용자가 좋아요/플레이리스트에 아무 음원도 없을 때
         given(songLikeRepository.findSongsLikedByUser(authUser.getUserId())).willReturn(Collections.emptyList());
         given(playlistSongRepository.findSongsPlaylistByUser(authUser.getUserId())).willReturn(Collections.emptyList());
 
-        // cold-start 추천 결과를 미리 정의
-        Slice<SongRecommendationResponseDto> expected = new SliceImpl<>(Collections.emptyList(), pageable, false);
-        given(songRepository.findRecommendedSongSliceForColdStart(pageable)).willReturn(expected);
+        // cold-start 추천 결과
+        SongRecommendationResponseDto dto = createDummyDto(1L);
+        List<SongRecommendationResponseDto> list = List.of(dto);
+        given(songRepository.findRecommendedSongListForColdStart()).willReturn(list);
 
-        // when 추천 서비스 호출
-        Slice<SongRecommendationResponseDto> result = recommendationService.getRecommendedSongSlice(authUser, pageable);
+        // when
+        List<SongRecommendationResponseDto> result = recommendationService.getRecommendedSongList(authUser);
 
-        // then cold-start 추천이 정상적으로 반환
-        assertNotNull(result);
+        // then
+        assertEquals(1, result.size());
+        assertEquals(1L, result.get(0).getSongId());
+
+        verify(songRepository).findRecommendedSongListForColdStart();
     }
+
 
     @Test
     @DisplayName("추천 조회 성공 - Seed가 있으면 추천 로직을 수행")
-    void success_getRecommendedSongSlice_withSeed() {
+    void success_getRecommendedSongList_withSeed() {
         // given
         AuthUser authUser = new AuthUser(1L, "test@test.com", UserRole.USER, 1L);
-        Pageable pageable = Pageable.ofSize(10);
 
         // 좋아요한 곡이 1번 곡 하나 있다고 가정
         given(songLikeRepository.findSongsLikedByUser(authUser.getUserId())).willReturn(List.of(1L));
@@ -92,24 +99,30 @@ class RecommendationServiceTest {
         given(featureVectorizer.vectorizeSongMap(recommendFeature)).willReturn(Map.of("g:pop", 1.0));
 
         // 최종 추천 결과
-        Slice<SongRecommendationResponseDto> expected = new SliceImpl<>(Collections.emptyList(), pageable, false);
-        given(songRepository.findRecommendedSongSlice(List.of(2L), pageable)).willReturn(expected);
+        SongRecommendationResponseDto dto = createDummyDto(2L);
+        List<SongRecommendationResponseDto> list = List.of(dto);
+        given(songRepository.findRecommendedSongList(List.of(2L))).willReturn(list);
 
         // when
-        Slice<SongRecommendationResponseDto> result = recommendationService.getRecommendedSongSlice(authUser, pageable);
+        List<SongRecommendationResponseDto> result = recommendationService.getRecommendedSongList(authUser);
 
-        // then 추천 로직이 정상 종료
-        assertNotNull(result);
+        // then
+        assertEquals(1, result.size());
+        assertEquals(2L, result.get(0).getSongId());
+
+        verify(songRepository).findSeedGenreList(List.of(1L));
+        verify(songRepository).findRecommendedSongList(List.of(2L));
     }
+
 
     @Test
     @DisplayName("실패 - 추천 후보가 없으면 빈 추천 결과를 반환")
     void fail_getRecommendedSongs_noCandidateSongSlice() {
         // given
         AuthUser authUser = new AuthUser(1L, "test@test.com", UserRole.USER, 1L);
-        Pageable pageable = Pageable.ofSize(10);
 
         given(songLikeRepository.findSongsLikedByUser(authUser.getUserId())).willReturn(List.of(1L));
+
         given(playlistSongRepository.findSongsPlaylistByUser(authUser.getUserId())).willReturn(Collections.emptyList());
 
         // 장르 ID
@@ -117,7 +130,6 @@ class RecommendationServiceTest {
 
         // Seed Genre 조회 mock
         given(songRepository.findSeedGenreList(List.of(1L))).willReturn(genreIdList);
-
         SongFeatureDto seedFeature = new SongFeatureDto(1L, List.of("Pop"), "high", null, null);
         given(songRepository.findFeatureBySongIdMap(List.of(1L))).willReturn(Map.of(1L, seedFeature));
         given(featureVectorizer.vectorizeUserMap(List.of(seedFeature))).willReturn(Map.of("g:pop", 1.0));
@@ -125,13 +137,11 @@ class RecommendationServiceTest {
         // 추천 후보가 없는 상황
         given(songRepository.findRecommendFeatureMap(List.of(1L), genreIdList)).willReturn(Collections.emptyMap());
 
-        Slice<SongRecommendationResponseDto> expected = new SliceImpl<>(Collections.emptyList(), pageable, false);
-        given(songRepository.findRecommendedSongSlice(Collections.emptyList(), pageable)).willReturn(expected);
-
         // when
-        Slice<SongRecommendationResponseDto> result = recommendationService.getRecommendedSongSlice(authUser, pageable);
+        List<SongRecommendationResponseDto> result = recommendationService.getRecommendedSongList(authUser);
 
-        // then 에러 없이 빈 결과 반환
-        assertNotNull(result);
+        // then
+        assertTrue(result.isEmpty());
+        verify(songRepository).findRecommendFeatureMap(List.of(1L), genreIdList);
     }
 }
